:bug: Corrige overflow de texto em botões

--- a/src/components/button.css
+++ b/src/components/button.css
@@ -10,6 +10,7 @@
 	align-items: center;
 	border-radius: 8px;
 	width: 50%;
+	min-width: min-content;
 }
 
 .block-button.block {
